--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -53,9 +53,9 @@
                 .item-title {
                     text-transform: capitalize;
                     margin: 1rem 0;
-                    font-size: 1.25rem;
-                    font-weight: 500;
                     font-family: $font-title;
+                    font-weight: 500;
+                    font-size: 1.5rem;
                     // font-size: clamp(1.5rem, 1.5vw, 1.8rem);
                     @include md {
                         margin: 0;
@@ -96,6 +96,8 @@
                     // border: 1px solid pink;
                     margin-bottom: 1rem;
                     font-weight: 500;
+                    font-size: 1rem;
+                    font-size: clamp(1rem, 1vw, 2rem);
                     @include md {
                         margin-bottom: 0;
                     }
@@ -105,11 +107,10 @@
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
-                    
                     gap: 1rem;
                     a {
                         border: 1px solid #000;
-                        padding: .5rem;
+                        padding: .85rem;
                         text-transform: capitalize;
                         font-size: .95rem;
                         border-radius: .25rem;
