--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -56,10 +56,10 @@
                     font-family: $font-title;
                     font-weight: 500;
                     font-size: 1.5rem;
-                    // font-size: clamp(1.5rem, 1.5vw, 1.8rem);
+                    font-size: clamp(1.5rem, 2.5vw, 2.5rem);
                     @include md {
                         margin: 0;
-                        font-size: 1.5rem;
+                        // font-size: 1.5rem;
                     }
                 }
                 .item-meta-data {
@@ -113,6 +113,7 @@
                         padding: .85rem;
                         text-transform: capitalize;
                         font-size: .95rem;
+                        font-size: clamp(.95rem, 1vw, 1.15rem);
                         border-radius: .25rem;
                         width: 100%;
                         text-align: center;
