item desciption fs

--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -103,7 +103,7 @@
                     p {
                         font-weight: 500;
                         font-size: 1rem;
-                        font-size: clamp(1rem, 1vw, 2rem);
+                        font-size: clamp(1rem, .5vw, 2rem);
                         &::first-letter {
                             text-transform: capitalize;
                         }
