--- a/css/style.css
+++ b/css/style.css
@@ -2904,7 +2904,7 @@ hamburger
 .work .work-container .item .item-header .item-description p {
   font-weight: 500;
   font-size: 1rem;
-  font-size: clamp(1rem, 1vw, 2rem);
+  font-size: clamp(1rem, .5vw, 2rem);
 }
 .work .work-container .item .item-header .item-description p::first-letter {
   text-transform: capitalize;
