--- a/css/style.css
+++ b/css/style.css
@@ -2964,12 +2964,13 @@ hamburger
 .work .work-container .item .item-content .item-image {
   overflow: hidden;
   width: 100%;
+  border-radius: 0.25rem;
   margin: 0 auto;
 }
 .work .work-container .item .item-content .item-image img {
   width: 100%;
-  height: 100%;
-  border-radius: 0.25rem;
+  height: 50%;
+  object-fit: cover;
   transition: 0.5s;
 }
 .work .work-container .item .item-content .item-image:hover img {
