--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -175,13 +175,15 @@
                     // height: 50vh;
                     overflow: hidden;
                     width: 100%;
-                    // border: 2px solid green;
+                    // border: 2px solid $overlay-blue-darkest;
+                    border-radius: .25rem;
                     margin: 0 auto;
                     img {
                         width: 100%;
-                        height: 100%;
-                        border-radius: .25rem;
+                        height: 50%;
+                        object-fit: cover;
                         transition: .5s;
+                        // border-radius: .25rem;
                         // border: 2px solid pink;
                     }
 
