--- a/sass/style.scss
+++ b/sass/style.scss
@@ -72,26 +72,62 @@ section {
     }
     font-weight: 400;
     color: $overlay-blue-darker;
-    max-width: 100vw;
     margin: 5vh 0 10vh;
     // border: 2px solid red;
     overflow: hidden;
     text-transform: uppercase;
     letter-spacing: .1rem;
     text-align: center;
-    // padding: .5em;
-    font-family: $font-ubuntu;
     font-family: $font-title;
     -webkit-box-reflect: below -1rem linear-gradient(transparent, #0003);
-
+    span {
+        position: relative;
+        // color: $overlay-blue-dark;
+        animation: section-span 3s ease-in-out infinite;
+        height: 5px;
+    
+        /* section title animations */
+        @keyframes section-span {
+    
+            0% {
+                top: 0px;
+                opacity: 1;
+                color: #dc143c;
+            }
+    
+            45% {
+                top: -20px;
+                opacity: 0;
+                color: $overlay-blue-dark;
+            }
+    
+            46% {
+                top: 20px;
+                opacity: 0;
+                color: $overlay-blue-light;
+            }
+            100% {
+                top: 0px;
+                opacity: 1;
+                color: #dc143c;
+            }
+        }
+        /* end of section title animations */
+    }
     &.io-item {
         opacity: 0;
         transform: scale(.8) translateY(5vh);
         transition: 1s;
+        span {
+            animation: none;
+        }
     }
     &.active-item {
         opacity: 1;
         transform: scale(1) translateY(0);
+        span {
+            animation: section-span 3s ease-in-out infinite 1s;
+        }
     }
 }
 }
