--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -5,6 +5,7 @@ $font-title:  'Kanit', sans-serif;
 $font-content: 'Montserrat', sans-serif;
 // TEXT COLORS
 $text-black: #000;
+$text-dark: #000;
 $text-white: #fff;
 $text-light: #f4f4f4;
 
