--- a/sass/style.scss
+++ b/sass/style.scss
@@ -71,7 +71,7 @@ section {
         
     }
     font-weight: 400;
-    color: $overlay-blue-darker;
+    color: $overlay-blue-darkest;
     margin: 5vh 0 10vh;
     // border: 2px solid red;
     overflow: hidden;
