--- a/css/style.css
+++ b/css/style.css
@@ -1814,13 +1814,11 @@ hamburger
   }
 }
 #skills .skills .skills-intro .skills-article p {
-  color: #f4f4f4;
-  color: #29323c;
+  color: #000;
   font-size: 1.25vw;
   font-size: clamp(.95rem, 1.5vw, 1.15rem);
   font-weight: 500;
   line-height: 1.6;
-  background: transparent;
   overflow: hidden;
 }
 #skills .skills .skills-intro .skills-article p span {
@@ -2890,7 +2888,6 @@ hamburger
   gap: 1rem;
 }
 .work .work-container .item .item-header .item-cta a {
-  border: 1px solid #000;
   padding: 0.85rem;
   text-transform: capitalize;
   font-size: 0.95rem;
@@ -2907,19 +2904,23 @@ hamburger
     gap: 1rem;
   }
 }
+.work .work-container .item .item-header .item-cta a i {
+  transform: translateX(0.5rem);
+  transition: 0.25s;
+}
 .work .work-container .item .item-header .item-cta a.cta-primary {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
   border: none;
   color: #f4f4f4;
   font-weight: 500;
 }
-.work .work-container .item .item-header .item-cta a.cta-primary i {
-  transform: translateX(0.5rem);
-  transition: 0.25s;
-}
 .work .work-container .item .item-header .item-cta a.cta-secondary {
-  font-size: 0.85rem;
+  border: 1px solid #15191e;
+  padding: 0.7rem;
   color: #000;
+}
+.work .work-container .item .item-header .item-cta a.cta-secondary i {
+  font-weight: 600;
 }
 @media (min-width: 768px) {
   .work .work-container .item .item-header .item-cta a:hover {
@@ -4339,7 +4340,7 @@ section {
 section .section-title {
   font-size: 2.25rem;
   font-weight: 400;
-  color: #20262e;
+  color: #15191e;
   margin: 5vh 0 10vh;
   overflow: hidden;
   text-transform: uppercase;
