--- a/css/style.css
+++ b/css/style.css
@@ -874,9 +874,13 @@ hamburger
     align-items: center;
     gap: 0.5rem;
     height: auto;
-    width: fit-content;
     width: 100%;
+    width: fit-content;
     background-color: transparent;
+    position: absolute;
+    right: 5vw;
+    top: 50%;
+    transform: translateY(-50%);
   }
   .header .navbar #nav .nav-list ul li {
     position: relative;
