--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -470,12 +470,16 @@
                         align-items: center;
                         gap: .5rem;
                         height: auto;
-                        width: fit-content;
                         width: 100%;
+                        width: fit-content;
                         // overflow: hidden;
                         background-color: transparent;
                         // border: 1px solid red;
-
+                        position: absolute;
+                        right: 5vw;
+                        top: 50%;
+                        transform: translateY(-50%);
+                        // z-index: -1;
                         li {
                             position: relative;
                             display: flex;
