--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -171,7 +171,7 @@
                 // ABOUT P
                 p {
                     // border: 2px solid red;
-                    color: $overlay-blue-darker;
+                    color: $text-dark;
                     padding-right: .25rem;
                     margin-bottom: 1.5rem;
                     text-overflow: ellipsis;
@@ -194,7 +194,7 @@
                     }
                     .item-title{
                         font-weight: 600;
-                        color: $overlay-blue-dark;
+                        color: $overlay-blue-darker;
                         display: block;
                     }
 
