--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -57,10 +57,10 @@
                 .item-title {
                     text-transform: capitalize;
                     margin: 1rem 0;
-                    font-family: $font-title;
-                    font-weight: 500;
-                    font-size: 1.5rem;
-                    font-size: clamp(1.4rem, 2.25vw, 2.5rem);
+                    font-weight: 700;
+                    font-size: 2vw;
+                    font-size: 1.2rem;
+                    font-size: clamp(1.2rem, 2vw, 2rem);
                     @include md {
                         // margin: 0;
                         // font-size: 1.5rem;
