--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -183,11 +183,10 @@
                         display: block;
                         width: 10rem;
                         font-size: .95rem;
+                        font-weight: 500;
                         letter-spacing: .05rem;
-                        // padding: .7rem;
                         padding: .7rem;
                         border-radius: .5rem;
-                        // margin: .5rem auto;
                         color: $text-light;
                         text-transform: capitalize;
                         cursor: pointer;
