--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -153,6 +153,7 @@
                             padding: .5rem;
                             margin: 1rem 0;
                             border-radius: .5rem;
+                            font-weight: 500;
                             text-transform: capitalize;
                             color: $text-light;
                             position: relative;
