--- a/css/style.css
+++ b/css/style.css
@@ -98,12 +98,10 @@ hamburger
   height: 0.3em;
 }
 #header .hamburger.active .bar::before {
-  background-color: #bfbfbf;
   transform: translateY(0) skewY(40deg);
 }
 #header .hamburger.active .bar::after {
-  background-color: #bfbfbf;
-  transform: translateY(0) skewY(-40deg) skewX(0);
+  transform: translateY(0) skewY(-40deg);
 }
 
 .container {
